hello-world-1.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-1
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
  selector:
     app: hello-world-1
---
apiVersion: apps/v1
kind: Deployment
metadata:
   name: hello-world-1
spec:
   replicas: 1
   selector:
      matchLabels:
         app: hello-world-1
   template:
      metadata:
        labels:
           app: hello-world-1
      spec:
         containers:
            - name: hello-kubernetes
              image: paulbouwer/hello-kubernetes:1.5
              ports:
                 - containerPort: 8080
