hello-world-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
   name: hello-world-ingress
   annotations:
      kubernetes.io/ingress.class: nginx
spec:
   rules:
      - host:
        http:
          paths:
            - backend:
                 serviceName: hello-world-1
                 servicePort: 80
      - host:
        http:
           paths:
              - backend:
                   serviceName: hello-world-2
                   servicePort: 80
